[package]
name = "konnektoren-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = { version = "0.19" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
